
==== version history of distribution Log::Report

Unless noted otherwise, these changes where initiated and applied by
Mark Overmeer.

TODO:
	. connect to Message::Passing framework

version 1.29:

	Improvements:
	- skip tests with error messages for Haiku, because they are quite
	  different. [cpantesters]

version 1.28: Tue 14 May 09:27:50 CEST 2019

	Fixes:
	- Dancer2 version 0.166001 is too old as well. [cpantesters]
	- call to wasFatal($class)/reportFatal($class) without exception
	  autovivified an 'undef' in the exception list. [Andrew Beverley]
	- fatal exception not always the last in try() block.

version 1.27: Fri  1 Jun 10:00:10 CEST 2018

	Fixes:
	- fix metadata [Mohammad S Anwar]

	Improvements:
	- Dancer2 add custom fatal handlers [Andrew Beverley]

version 1.26: Tue Jan 23 23:45:55 CET 2018

	Improvements:
	- convert to GIT
	- publish via GitHUB

version 1.25: Fri  8 Dec 09:18:23 CET 2017

	Fixes:
	- $msg->tostring on append/prepend object lost $locale.

version 1.24: Fri  8 Dec 09:10:18 CET 2017

	Fixes:
	- $msg->toString should stringify when append/prepend are objects.
	  rt.cpan.org#123835 [Andy Beverley]

	Improvements:
	- Log4perl dispatcher: do accept init of Log::Log4perl outside the
	  dispatcher [Abe Timmerman]

version 1.23: Thu  2 Nov 10:40:24 CET 2017

	Improvements:
	- understand objects in report()   rt.cpan.org #123241 [Andy Beverley]
	- understand DBIx::Class::Exception in try{}
	- understand XML::LibXML::Error in try{}

version 1.22: Thu 12 Oct 12:18:54 CEST 2017

	Improvements:
	- try() also collects DEBUG info when one of the dispatches wants it.
	- document that ::Translator::POT does not require charset anymore.
	- support __p, __px, etc from Locale::TextDomain

version 1.21: Mon  3 Jul 15:31:19 CEST 2017

	Fixes:
	- _prepend and _append texts doubled.
	  rt.cpan.org#122304 [Andreas Koenig]
	- accidental stringification of exceptions
	  rt.cpan.org#122324 [Slaven Rezic]

	Improvements: